Final system stabilization: Fixed Admin role CORS, role prefixing, and Home AI endpoint mismatch.